# semantic

./: cabal.project
semantic-python/src/Language/Python/: Core.hs
semantic-stream/: README.md  semantic-stream.cabal
semantic-stream/src/: Main.hs
