cabal-version:       2.4
name:                semantic-stream
version:             0.1.0.0
synopsis:            Constant-space symbol tagging
description:         Executable based on semantic that exhibits constant space use.
homepage:            https://github.com/github/semantic
license:             BSD-3-Clause
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrickt@github.com
copyright:           GitHub
category:            Semantic
build-type:          Simple
extra-source-files:  README.md

common haskell
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , FlexibleContexts
                     , FlexibleInstances
                     , MonadFailDesugaring
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , StandaloneDeriving
                     , StrictData
                     , TypeApplications


executable semantic-stream
  import:              haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , semantic
                     , exceptions
                     , foldl ^>= 1.4.5
                     , generic-lens ^>= 1.1
                     , gitlib ^>= 3.1.2
                     , gitlib-libgit2 ^>= 3.1.2.1
                     , fused-effects ^>= 0.4.0.0
                     , fused-effects-exceptions ^>= 0.1.1.0
                     , optparse-applicative
                     , lens
                     , streaming ^>= 0.2.2.0
                     , streaming-bytestring ^>= 0.1.6
                     , streaming-conduit ^>= 0.1.2.2
                     , streaming-utils ^>= 0.2
                     , tagged ^>= 0.8.6
                     , vector ^>= 0.12.0.3
                     , text ^>= 1.2.3.1
                     , mtl ^>= 2.2
                     , unliftio-core ^>= 0.1.2.0
